--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "^5.9.55",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "node-sass": "^5.0.0",
     "roboto-fontface": "^0.10.0",
