--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
     "vue": "^2.6.11",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.5.1",
-    "vuetify": "^2.4.9"
+    "vuetify": "^2.4.9",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
